<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.FactsFragment">
    <androidx.emoji.widget.EmojiTextView
        android:id="@+id/noResult"
        android:gravity="center"
        android:text="@string/message_no_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/paddin_defaut"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/facts"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/adapter_fact_item"
        android:paddingBottom="8dp"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/paddin_defaut"
        android:src="@drawable/ic_search_white"
        app:backgroundTint="@color/colorPrimary"
        app:rippleColor="@color/white"
        app:tint="@color/white"/>
</FrameLayout>