...
        android:id="@+id/queryInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_search"
        app:boxBackgroundColor="@android:color/transparent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/query"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:minLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>
...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_suggestions"
        android:visibility="invisible"
        style="@style/label"/>
    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:chipSpacingVertical="3dp"
        app:chipSpacingHorizontal="3dp"/>
    <TextView
        android:id="@+id/searchedLabel"
...
