<resources>
    <string name="app_name">Chuck Norris Facts</string>
    <string name="aguarde">Aguarde&#8230;</string>
    <string name="hint_search">Enter your search term</string>
    <string name="search_suggestions">Suggestions</string>
    <string name="search_past_searches">Past Searches</string>
    <string name="search_title">SEARCH FACTS</string>
    <string name="facts_title">CHUCK NORRIS FACTS</string>
    <string name="message_no_connection">No internet connection</string>
    <string name="message_fail_load_data">Failed to load data</string>
    <string name="message_required_field">Required field</string>
    <string name="buuton_close">CLOSE</string>
    <string name="message_no_result">
        No result, 😓 take a \'Roundhouse Kick´ 👊  on your dismay and try again 😅
    </string>
    <string name="title_share">Choose one</string>
    <string name="acessibility_share">share</string>
</resources>
