<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/host"
    app:startDestination="@id/factsFragment">
    <fragment
        android:id="@+id/factsFragment"
        android:name="com.chucknorrisfacts.view.FactsFragment"
        tools:layout="@layout/fragment_facts"
        android:label="@string/facts_title">
        <action
            android:id="@+id/action_factsFragment_to_searchFragment"
            app:destination="@id/searchFragment"
            app:launchSingleTop="false"
            app:popUpToInclusive="false"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
    </fragment>
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.chucknorrisfacts.view.SearchFragment"
        tools:layout="@layout/fragment_search"
        android:label="@string/search_title"/>
</navigation>